# snsr

./: README.md  main_ubuntu.py  pyproject.toml
.agent/workflows/: publish_to_pypi.md
.github/workflows/: publish.yml
